feat: filter works based in days of the week